Ensure left and right aligned items float

--- a/assets/scss/_alignment.scss
+++ b/assets/scss/_alignment.scss
@@ -16,10 +16,12 @@
 
 .alignleft {
   margin-right: 1rem;
+  float: left;
 }
 
 .alignright {
   margin-left: 1rem;
+  float: right;
 }
 
 .aligncenter {
